--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "ag-grid-angular": "^33.0.4",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
