--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "ag-grid-angular": "^33.0.4",
+    "angular-split": "^18.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
