--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nx/js": "20.3.1",
     "@nx/web": "20.3.1",
     "@nx/workspace": "20.3.1",
+    "@openapitools/openapi-generator-cli": "^2.15.3",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
