--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@angular/router": "~19.0.0",
     "ag-grid-angular": "^33.0.4",
     "angular-split": "^18.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -32,6 +34,8 @@
     "@nx/eslint-plugin": "20.3.1",
     "@nx/jest": "20.3.1",
     "@nx/js": "20.3.1",
+    "@nx/node": "^20.3.1",
+    "@nx/react": "^20.3.1",
     "@nx/web": "20.3.1",
     "@nx/workspace": "20.3.1",
     "@openapitools/openapi-generator-cli": "^2.15.3",
