--- a/nx.json
+++ b/nx.json
@@ -1,4 +1,5 @@
 {
+  "useDaemonProcess": true,
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "master",
   "namedInputs": {
