--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ag-grid-angular": "^33.0.4",
     "angular-split": "^18.0.0",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "~4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
