--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@types/d3": "^7.4.3",
     "ag-grid-angular": "^33.0.4",
     "ag-grid-enterprise": "^33.0.4",
     "angular-split": "^18.0.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "express": "~4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
