--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@arcgis/core": "^4.31.6",
+    "@arcgis/map-components": "^4.31.6",
     "ag-grid-angular": "^33.0.4",
     "ag-grid-enterprise": "^33.0.4",
     "angular-split": "^18.0.0",
